<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg_color"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/about_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_about" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/svg_go" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/feedback_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_email" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/svg_go" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_share" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/svg_go" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/pp_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_lock" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/svg_go" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/tos_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_detail" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/terms_of_service"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/svg_go" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>