<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg_color"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/ready_to_sleep"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/home_top_desc"
                android:textColor="@color/blue"
                android:layout_marginStart="8dp"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/real_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    tools:itemCount="1"
                    tools:listitem="@layout/real_human_voice_layout" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sounds_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/regular_font"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:layout_marginStart="8dp"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sounds_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    tools:itemCount="1"
                    tools:listitem="@layout/sounds_of_appliances_layout" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/nature_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/regular_font"
                android:text="@string/app_name"
                android:layout_marginStart="8dp"
                android:textColor="@color/blue"
                android:textSize="24sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nature_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="14dp"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    tools:itemCount="1"
                    tools:listitem="@layout/sounds_of_nature_layout" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>